intel/bench_214_work/extr_.Craftdepsglfwsrccontext.c__glfwChooseFBConfig_with_main/log.txt
bench_214_work/extr_.Craftdepsglfwsrccontext.c__glfwChooseFBConfig_with_main/extr_.Craftdepsglfwsrccontext.c__glfwChooseFBConfig_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.Craftdepsglfwsrccontext.c__glfwChooseFBConfig_with_main/extr_.Craftdepsglfwsrccontext.c__glfwChooseFBConfig_with_main.c:31:26: error: cannot initialize a variable of type 'const _GLFWfbconfig *' (aka 'const TYPE_5__ *') with an rvalue of type 'void *'
    const _GLFWfbconfig* closest = NULL;
                         ^         ~~~~
2 errors generated.
HLS FPGA Parse FAILED.
